# heiko_hash_task

./: Cargo.toml  README.MD
benches/: aggregator_benchmark.rs
src/: aggregator.rs  helpers.rs
src/tests/: test_aggregate_hashes.rs
